--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,32 @@ img {
   text-align: center;
   padding-top: 0.35rem;
 }
+
+.final-dishes {
+  width: 450px;
+  height: auto;
+}
+
+.introduce {
+  padding: 1rem;
+}
+
+.explain {
+  line-height: 1.75rem;
+}
+
+.explain div {
+  margin-top: 0.75rem;
+}
+
+.footer {
+  background-color: #de4c3f;
+  background-color: #de4c3f;
+  text-align: center;
+  padding: 10px;
+}
+
+.footer a {
+  color: whitesmoke;
+  text-decoration: none;
+}
